# rust_wasm_game

./: Cargo.toml  Makefile.toml  README.md  build.toml
src/: games.rs  lib.rs  player.rs
src/games/: gomoku.rs  seed.rs
web_client/: Cargo.toml  Makefile.toml
web_client/src/: ggui.rs  gl.rs  lib.rs  util.rs
web_client/src/ggui/: gomoku.rs  seed.rs
web_client/src/gl/: frag.glsl  vertex.glsl
web_client/src/gl/gg/: frag.glsl
web_server/: Cargo.toml  Makefile.toml
web_server/src/: gm.rs  lobby.rs  main.rs  user.rs
