[package]
name = "web_client"
version = "0.1.0"
authors = ["maxtnt <ttg1256@naver.com>"]
edition = "2018"

[lib]
cfg-if = "0.1.2"
crate-type=["cdylib","rlib"]

[dependencies]
wasm-bindgen = "0.2.33"
wasm_games = { path = ".." ,version = "0.1.0"}

[dependencies.web-sys]
version = "0.3"
features = [
  "console",
]

[dev-dependencies]
wasm-bindgen-test = "0.2"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "z"