[package]
name = "web_client"
version = "0.1.0"
authors = ["maxtnt <ttg1256@naver.com>"]
edition = "2018"

[lib]
cfg-if = "0.1.2"
crate-type=["cdylib","rlib"]

[dependencies]
js-sys = "0.3.16"
serde = "^1.0.59"
serde_derive = "^1.0.59"
wasm-bindgen = { version = "0.2.39", features = ["serde-serialize"] }
wasm_games = { path = ".." ,version = "0.1.0"}

[dependencies.web-sys]
version = "0.3.17"
features = [
  "console",
  "Document",
  "Element",
  "HtmlCanvasElement",
  "WebGlBuffer",
  "WebGl2RenderingContext",
  "WebGlVertexArrayObject",
  "WebGlProgram",
  "WebGlShader",
  "Window",
  "WebGlUniformLocation"
]

[dev-dependencies]
wasm-bindgen-test = "0.2"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "z"